--- a/test2.css
+++ b/test2.css
@@ -1,15 +1,41 @@
 body{
 
-background-color: blue;
-border: solid; color: green;
-padding: 1em;
 
+border: solid; color: blue;
+padding: .5em ;
+display: flex;
+flex-direction: column;
+min-height: 100vh;
 }
 
 h1
 {
 
-color: gray;
+color: orange;
+
+
+}
+
+
+h2{
+
+
+color:brown;
+
+
+}
+
+div.blue
+{
+
+background-image: url("Images/Hydrafpv2.jpg")
+
+
+}
+
+div.yellow
+{
+background-color: yellow;
 
 
 }
